infra/k8s/auth-mongo-depl.yaml
# this is a mongodb deployment for the auth microservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        # building image from the official image @ DockerHub
        - name: auth-mongo
          image: mongo
---
# clusterIP service for the pods of auth-mongo-depl
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  # select all the pods with the app: auth-mongo label
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      # as per the official image documentation
      port: 27017
      targetPort: 27017
